fix(hero and filed): adding text alignment and margin of hero

--- a/sass/components/field.sass
+++ b/sass/components/field.sass
@@ -30,6 +30,7 @@ $field-description-margin-horizontal:    0 !default
 
   // Label Elements
   &__label
+    text-align: left
     display: block
     font-weight: 500
 
