--- a/sass/components/hero.sass
+++ b/sass/components/hero.sass
@@ -3,7 +3,7 @@
 .hero
   //margin-bottom: 60px
   &__left
-    margin-top: 40px
+    margin-top: 118px
     &--quote
       margin-top: 40px
   &__right
